fix: nav z-index 부여

--- a/style/style.css
+++ b/style/style.css
@@ -3,7 +3,7 @@ nav {
   position: fixed;
   justify-content: center;
   align-items: center;
-  /* gap: 100px; */
+  z-index: 1;
   width: 100%;
   height: 70px;
   padding: 10px;
@@ -248,6 +248,7 @@ h2 {
     bottom: 0;
     height: 50px;
     font-size: 15px;
+    z-index: 1;
   }
 
   #container {
@@ -307,6 +308,7 @@ h2 {
 
   .visitRoot {
     font-size: 17px;
+    font-weight: 700;
     margin: 30px 0 20px 0;
   }
 
@@ -317,6 +319,7 @@ h2 {
 
   .reservation {
     width: 100px;
+    font-size: 13px;
     height: 35px;
     line-height: 35px;
   }
